syntax = "proto3";

package kritor.event;

option csharp_namespace = "Kritor.Event";
option java_multiple_files = true;
option java_package = "io.kritor.event";

import "kritor/event/event_message.proto";

enum EventType {
  CORE_EVENT = 0;
  MESSAGE = 1;
  NOTICE = 2;
  REQUEST = 3;
}

message EventRequest {
  EventType type = 1;
}

message EventStructure {
  EventType type = 1;
  oneof event {
    MessageEvent message = 2;
  }
}